# py-git-log-analyzer

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
py-git-log-analyzer/: __init__.py
py_git_log_analyzer/: __init__.py  __main__.py  cli.py  core.py  git_lab.py  pure_git.py
samples/: under_some_dir.ipynb
tests/: test_core.py
