# -*- coding: utf-8 -*-
[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = py_git_log_analyzer
version = attr: py_git_log_analyzer.VERSION
url = https://github.com/o-hayato/py_git_log_analyzer
download_url =
project_urls =
author = o-hayato
author_email = preasper0+github@gmail.com
maintainer =
maintainer_email =
classifiers =
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = file: LICENSE
description='python boilerplate',
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
platforms = any
provides =
requires =
obsoletes =

# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
zip_safe = False
setup_requires =
python_requires = >=3.4
include_package_data = True
packages =
  py_git_log_analyzer

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox
    invoke
    wheel
    twine
    invoke
    jupyter
docs =
    sphinx
    pallets-sphinx-themes
    sphinxcontrib-log-cabinet

[options.entry_points]
console_scripts =
    py_git_log_analyzer = py_git_log_analyzer.cli:main
#gui_scripts =

[tool:pytest]
minversion = 3.0
testpaths = tests

[coverage:run]
branch = True
source =
    py_git_log_analyzer
    tests

[coverage:paths]
source =
    py_git_log_analyzer
    .tox/*/lib/python*/site-packages/py_git_log_analyzer
    .tox/pypy/site-packages/py_git_log_analyzer

